--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "blog"
   ],
   "author": "garry",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "webpack": "^4.9.1",
+    "webpack-dev-server": "^3.1.4"
+  }
 }
