React-ES6next环境，Babel搭建

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The blog of Garry",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack --config ./config/webpack.base.conf.js",
+    "build": ""
   },
   "keywords": [
     "blog"
@@ -12,7 +13,24 @@
   "author": "garry",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "webpack": "^4.9.1",
+    "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4"
-  }
+  },
+  "dependencies": {
+    "babel-runtime": "^6.26.0",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
