--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "The blog of Garry",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --config ./config/webpack.base.conf.js",
-    "build": ""
+    "start": "webpack --config ./config/webpack.dev.conf.js",
+    "build": "webpack --config ./config/webpack.prod.conf.js",
+    "dev": "webpack --config ./config/webpack.dev.conf.js"
   },
   "keywords": [
     "blog"
@@ -19,9 +20,18 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.9.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.1",
+    "postcss-loader": "^2.1.5",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.9.1",
     "webpack-cli": "^2.1.4",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.2"
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
