--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "description": "The blog of Garry",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --config ./config/webpack.dev.conf.js",
+    "start": "webpack-dev-server --open --config ./config/webpack.dev.conf.js",
     "build": "webpack --config ./config/webpack.prod.conf.js",
     "dev": "webpack --config ./config/webpack.dev.conf.js"
   },
-  "keywords": [
-    "blog"
-  ],
+  "keywords": ["blog"],
   "author": "garry",
   "license": "ISC",
   "devDependencies": {
@@ -41,9 +39,5 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
 }
