--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "webpack --config ./config/webpack.prod.conf.js",
     "dev": "webpack-dev-server --open --config ./config/webpack.dev.conf.js"
   },
-  "keywords": ["blog"],
+  "keywords": [
+    "blog"
+  ],
   "author": "garry",
   "license": "ISC",
   "devDependencies": {
@@ -20,6 +22,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
@@ -39,5 +42,9 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
