--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "build": "webpack --config ./config/webpack.prod.conf.js",
     "dev": "webpack-dev-server --open --config ./config/webpack.dev.conf.js"
   },
-  "keywords": ["blog"],
+  "keywords": [
+    "blog"
+  ],
   "author": "garry",
   "license": "ISC",
-
   "devDependencies": {
+    "autoprefixer": "^8.6.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -41,5 +43,9 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
