--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "normalize.css": "^8.0.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   },
