react 事件处理 属性初始化器语法

--- a/.babelrc
+++ b/.babelrc
@@ -15,6 +15,7 @@
   ],
   "plugins": [
     "transform-runtime",
+    ["transform-class-properties", { "spec": true }],
     [
       "react-css-modules",
       {
