--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "garry-blog",
-  "sideEffects": ["*.css", "*.scss"],
+  "sideEffects": [
+    "*.css",
+    "*.scss"
+  ],
   "version": "0.0.1",
   "description": "The blog of Garry",
   "main": "index.js",
@@ -9,7 +12,9 @@
     "build": "webpack --config ./config/webpack.prod.conf.js",
     "dev": "webpack-dev-server --open --config ./config/webpack.dev.conf.js"
   },
-  "keywords": ["blog"],
+  "keywords": [
+    "blog"
+  ],
   "author": "garry",
   "license": "ISC",
   "devDependencies": {
@@ -17,6 +22,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-react-css-modules": "^3.4.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
@@ -45,5 +51,9 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
