--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "start": "npm run dev",
     "build": "webpack --config ./config/webpack.prod.conf.js",
-    "dev": "webpack-dev-server --open --config ./config/webpack.dev.conf.js"
+    "dev": "webpack-dev-server --open --config ./config/webpack.dev.conf.js",
+    "flow": "flow"
   },
   "keywords": [
     "blog"
@@ -25,11 +26,13 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
+    "flow-bin": "^0.76.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
