--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
 	"name": "garry-blog",
-	"sideEffects": ["*.css", "*.scss"],
+	"sideEffects": [
+		"*.css",
+		"*.scss"
+	],
 	"version": "0.0.1",
 	"description": "The blog of Garry",
 	"main": "index.js",
@@ -11,12 +14,15 @@
 		"flow": "flow",
 		"eslint": "eslint"
 	},
-	"keywords": ["blog"],
+	"keywords": [
+		"blog"
+	],
 	"author": "garry",
 	"license": "ISC",
 	"devDependencies": {
 		"autoprefixer": "^8.6.1",
 		"babel-core": "^6.26.3",
+		"babel-eslint": "^8.2.6",
 		"babel-loader": "^7.1.4",
 		"babel-plugin-react-css-modules": "^3.4.2",
 		"babel-plugin-transform-class-properties": "^6.24.1",
@@ -53,5 +59,9 @@
 		"react": "^16.4.0",
 		"react-dom": "^16.4.0"
 	},
-	"browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not ie <= 8"
+	]
 }
