--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
 		"indent": ["error", "tab"],
 		"linebreak-style": ["error", "unix"],
 		"quotes": ["error", "single"],
-		"semi": ["error", "always"]
+		"semi": ["error", "always"],
+		"no-console": ["off"]
 	}
 }
