--- a/package.json
+++ b/package.json
@@ -21,6 +21,14 @@
 	],
 	"author": "garry",
 	"license": "ISC",
+	"dependencies": {
+		"babel-runtime": "^6.26.0",
+		"normalize.css": "^8.0.0",
+		"prop-types": "^15.6.2",
+		"react": "^16.4.0",
+		"react-dom": "^16.4.0",
+		"react-router-dom": "^4.3.1"
+	},
 	"devDependencies": {
 		"autoprefixer": "^8.6.1",
 		"babel-core": "^6.26.3",
@@ -54,13 +62,6 @@
 		"webpack-cli": "^2.1.4",
 		"webpack-dev-server": "^3.1.4",
 		"webpack-merge": "^4.1.2"
-	},
-	"dependencies": {
-		"babel-runtime": "^6.26.0",
-		"normalize.css": "^8.0.0",
-		"prop-types": "^15.6.2",
-		"react": "^16.4.0",
-		"react-dom": "^16.4.0"
 	},
 	"browserslist": [
 		"> 1%",
