--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
 	"author": "garry",
 	"license": "ISC",
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.2",
+		"@fortawesome/free-solid-svg-icons": "^5.2.0",
+		"@fortawesome/react-fontawesome": "^0.1.2",
 		"babel-runtime": "^6.26.0",
 		"normalize.css": "^8.0.0",
 		"prop-types": "^15.6.2",
