--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-loadable": "^5.5.0",
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
