--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "webpack": "^4.9.1",
+    "webpack-bundle-analyzer": "^3.0.2",
     "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
