--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "@fortawesome/react-fontawesome": "^0.1.2",
-    "babel-runtime": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.0",
@@ -40,7 +40,6 @@
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.4",
     "babel-plugin-react-css-modules": "^3.4.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
