--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "@fortawesome/react-fontawesome": "^0.1.2",
+    "@types/react": "^16.4.17",
+    "@types/react-dom": "^16.0.9",
     "babel-polyfill": "^6.26.0",
     "koa": "^2.5.3",
     "koa-router": "^7.4.0",
@@ -64,6 +66,8 @@
     "postcss-scss": "^1.0.5",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
+    "ts-loader": "^5.2.2",
+    "typescript": "^3.1.3",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "webpack": "^4.9.1",
