--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:dll": "webpack --config ./config/webpack.dll.conf.js",
     "dev": "webpack-dev-server --open --config ./config/webpack.dev.conf.js",
     "flow": "flow",
-    "lint": "eslint --ext .js,.jsx src"
+    "eslint": "eslint --ext .ts,.tsx src"
   },
   "keywords": [
     "blog",
@@ -43,7 +43,6 @@
   "devDependencies": {
     "autoprefixer": "^8.6.1",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.4",
     "babel-plugin-react-css-modules": "^3.4.2",
     "babel-preset-env": "^1.7.0",
@@ -52,9 +51,6 @@
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
-    "eslint": "^5.2.0",
-    "eslint-loader": "^2.1.0",
-    "eslint-plugin-react": "^7.10.0",
     "file-loader": "^1.1.11",
     "flow-bin": "^0.76.0",
     "html-webpack-plugin": "^3.2.0",
@@ -67,7 +63,11 @@
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "ts-loader": "^5.2.2",
+    "tslint": "^5.11.0",
+    "tslint-loader": "^3.5.4",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.1.3",
+    "typescript-eslint-parser": "^20.0.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "webpack": "^4.9.1",
