--- a/.babelrc
+++ b/.babelrc
@@ -5,13 +5,19 @@
       {
         "modules": false,
         "targets": {
-          "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
+          "browsers": [
+            "last 2 versions",
+            "Firefox ESR",
+            "> 1%",
+            "ie >= 9",
+            "iOS >= 8",
+            "Android >= 4"
+          ]
         },
         "useBuiltIns": true,
         "debug": false
       }
     ],
-    "flow",
     "react",
     "stage-2"
   ],
