--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@fortawesome/react-fontawesome": "^0.1.2",
     "@types/react": "^16.4.17",
     "@types/react-dom": "^16.0.9",
+    "@types/react-loadable": "^5.4.1",
+    "@types/react-router-dom": "^4.3.1",
     "babel-polyfill": "^6.26.0",
     "koa": "^2.5.3",
     "koa-router": "^7.4.0",
@@ -68,6 +70,7 @@
     "tslint-react": "^3.6.0",
     "typescript": "^3.1.3",
     "typescript-eslint-parser": "^20.0.0",
+    "typings-for-css-modules-loader": "^1.7.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "webpack": "^4.9.1",
