--- a/package.json
+++ b/package.json
@@ -60,7 +60,10 @@
     "node-sass": "^4.9.0",
     "nodemon": "^1.18.4",
     "optimize-css-assets-webpack-plugin": "^4.0.1",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^2.1.5",
+    "postcss-mixins": "^6.2.0",
+    "postcss-preset-env": "^6.2.0",
     "postcss-scss": "^1.0.5",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
@@ -80,8 +83,11 @@
     "webpack-merge": "^4.1.2"
   },
   "browserslist": [
-    "> 1%",
     "last 2 versions",
-    "not ie <= 8"
+    "Firefox ESR",
+    "> 1%",
+    "ie >= 9",
+    "iOS >= 8",
+    "Android >= 4"
   ]
 }
