--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "@fortawesome/react-fontawesome": "^0.1.2",
+    "@types/koa": "^2.0.46",
+    "@types/koa-router": "^7.0.32",
+    "@types/koa-static": "^4.0.0",
     "@types/react": "^16.4.17",
     "@types/react-dom": "^16.0.9",
     "@types/react-loadable": "^5.4.1",
