--- a/.babelrc
+++ b/.babelrc
@@ -12,7 +12,8 @@
             "ie >= 9",
             "iOS >= 8",
             "Android >= 4"
-          ]
+          ],
+          "node": "current"
         },
         "useBuiltIns": true,
         "debug": false
