--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build": "webpack --config ./config/webpack.prod.conf.js",
     "build:dll": "webpack --config ./config/webpack.dll.conf.js",
     "dev": "webpack-dev-server --open --config ./config/webpack.dev.conf.js",
+    "dev:node": "webpack --watch --config ./config/webpack.node.conf.js",
     "tslint": "tslint --fix -c ./tslint.json 'src/**/*{.ts,.tsx}'"
   },
   "keywords": [
@@ -43,6 +44,7 @@
     "@types/react-dom": "^16.0.9",
     "@types/react-loadable": "^5.4.1",
     "@types/react-router-dom": "^4.3.1",
+    "@types/webpack-env": "^1.13.6",
     "babel-polyfill": "^6.26.0",
     "koa": "^2.5.3",
     "koa-router": "^7.4.0",
@@ -72,6 +74,7 @@
     "postcss-loader": "^2.1.5",
     "postcss-mixins": "^6.2.0",
     "postcss-preset-env": "^6.2.0",
+    "start-server-webpack-plugin": "^2.2.5",
     "style-loader": "^0.21.0",
     "ts-loader": "^5.2.2",
     "tslint": "^5.11.0",
@@ -86,6 +89,7 @@
     "webpack-bundle-analyzer": "^3.0.2",
     "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "^4.1.2",
+    "webpack-node-externals": "^1.7.2"
   }
 }
