chore(ts-node): use ts-node by nodemon in dev

--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "outDir": "./dist",
     "target": "es6",
-    "module": "commonjs",
+    "module": "esnext",
     "jsx": "preserve",
     "sourceMap": true,
     "moduleResolution": "node",
@@ -12,7 +12,7 @@
     "noUnusedLocals": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
-    "baseUrl": ".",
+    "baseUrl": "../",
     "paths": {
       "@/*": ["./src/browser/*"],
       "#/*": ["./src/server/*"]
