--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
   "description": "The blog of Garry",
   "main": "index.js",
   "scripts": {
-    "start": "npm run dev:node",
-    "serve": "nodemon ./src/server/index.js ",
-    "build": "webpack --config ./config/webpack.prod.conf.js",
-    "build:dll": "webpack --config ./config/webpack.dll.conf.js",
-    "dev": "webpack-dev-server --open --config ./config/webpack.dev.conf.js",
-    "dev:node": "nodemon --watch 'src/server/**/*.ts' --exec 'ts-node' src/server/index.ts",
+    "start": "npm run dev",
+    "serve": "nodemon --watch 'src/server/**/*.ts' --exec 'ts-node' src/server/index.ts",
+    "build": "webpack --config ./config/webpack.prod.conf.ts",
+    "build:dll": "webpack --config ./config/webpack.dll.conf.ts",
+    "dev": "webpack-dev-server --open --config ./config/webpack.dev.conf.ts",
     "tslint": "tslint --fix -c ./tslint.json 'src/**/*{.ts,.tsx}'"
   },
   "keywords": [
@@ -37,18 +36,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "@fortawesome/react-fontawesome": "^0.1.2",
-    "@types/koa": "^2.0.46",
-    "@types/koa-router": "^7.0.32",
-    "@types/koa-static": "^4.0.0",
-    "@types/react": "^16.4.17",
-    "@types/react-dom": "^16.0.9",
-    "@types/react-loadable": "^5.4.1",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/webpack-env": "^1.13.6",
     "babel-polyfill": "^6.26.0",
     "koa": "^2.5.3",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
+    "koa-webpack-dev-middleware": "^2.0.2",
+    "koa-webpack-hot-middleware": "^1.0.3",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.0",
@@ -57,6 +50,24 @@
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
+    "@types/clean-webpack-plugin": "^0.1.2",
+    "@types/html-webpack-plugin": "^3.2.0",
+    "@types/koa": "^2.0.46",
+    "@types/koa-router": "^7.0.32",
+    "@types/koa-static": "^4.0.0",
+    "@types/mini-css-extract-plugin": "^0.2.0",
+    "@types/node": "^10.12.1",
+    "@types/react": "^16.4.17",
+    "@types/react-dom": "^16.0.9",
+    "@types/react-loadable": "^5.4.1",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/uglifyjs-webpack-plugin": "^1.1.0",
+    "@types/webpack": "^4.4.17",
+    "@types/webpack-bundle-analyzer": "^2.13.0",
+    "@types/webpack-dev-server": "^3.1.1",
+    "@types/webpack-env": "^1.13.6",
+    "@types/webpack-merge": "^4.1.3",
+    "@types/webpack-node-externals": "^1.6.3",
     "autoprefixer": "^8.6.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
