--- a/tsconfig.webpack.json
+++ b/tsconfig.webpack.json
@@ -12,7 +12,7 @@
     "noUnusedLocals": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
-    "baseUrl": "../",
+    "baseUrl": "./",
     "paths": {
       "@/*": ["./src/browser/*"],
       "#/*": ["./src/server/*"]
