chore(template webpack tsconfig)

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run dev",
-    "serve": "nodemon --watch 'src/server/**/*.ts' --exec 'ts-node' src/server/index.ts",
+    "serve": "nodemon --watch 'src/server/**/*.*' --exec 'ts-node' src/server/index.ts",
     "build": "webpack --config ./config/webpack.prod.conf.ts",
     "build:dll": "webpack --config ./config/webpack.dll.conf.ts",
     "dev": "webpack-dev-server --open --config ./config/webpack.dev.conf.ts",
@@ -36,10 +36,16 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "@fortawesome/react-fontawesome": "^0.1.2",
+    "@types/koa-convert": "^1.2.1",
+    "@types/koa-views": "^2.0.3",
+    "@types/react-router-config": "^1.0.9",
     "babel-polyfill": "^6.26.0",
+    "ejs": "^2.6.1",
     "koa": "^2.5.3",
+    "koa-convert": "^1.2.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
+    "koa-views": "^6.1.4",
     "koa-webpack-dev-middleware": "^2.0.2",
     "koa-webpack-hot-middleware": "^1.0.3",
     "normalize.css": "^8.0.0",
@@ -47,10 +53,12 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-loadable": "^5.5.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-config": "^4.4.0-beta.6",
+    "react-router-dom": "^4.4.0-beta.6"
   },
   "devDependencies": {
     "@types/clean-webpack-plugin": "^0.1.2",
+    "@types/css-modules-require-hook": "^4.0.1",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/koa": "^2.0.46",
     "@types/koa-router": "^7.0.32",
@@ -68,15 +76,20 @@
     "@types/webpack-env": "^1.13.6",
     "@types/webpack-merge": "^4.1.3",
     "@types/webpack-node-externals": "^1.6.3",
+    "asset-require-hook": "^1.2.0",
     "autoprefixer": "^8.6.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "browser-sync": "^2.26.3",
+    "browser-sync-webpack-plugin": "^2.2.2",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
+    "css-modules-require-hook": "^4.2.3",
     "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "nodemon": "^1.18.4",
