--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,10 @@
     "outDir": "./dist",
     "target": "es6",
     "module": "commonjs",
-    "jsx": "preserve",
+    "jsx": "react",
     "sourceMap": true,
     "moduleResolution": "node",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "strictNullChecks": true,
     "noUnusedParameters": true,
     "noUnusedLocals": true,
