--- a/tsconfig.webpack.json
+++ b/tsconfig.webpack.json
@@ -13,6 +13,7 @@
     "experimentalDecorators": true,
     "resolveJsonModule": true,
     "baseUrl": "./",
+    "typeRoots": ["./typings", "./node_modules/@types/"],
     "paths": {
       "@/*": ["./src/browser/*"],
       "#/*": ["./src/server/*"]
