--- a/package.json
+++ b/package.json
@@ -36,18 +36,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "@fortawesome/react-fontawesome": "^0.1.2",
-    "@types/koa-convert": "^1.2.1",
-    "@types/koa-views": "^2.0.3",
-    "@types/react-router-config": "^1.0.9",
     "babel-polyfill": "^6.26.0",
     "ejs": "^2.6.1",
     "koa": "^2.5.3",
-    "koa-convert": "^1.2.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.1.4",
-    "koa-webpack-dev-middleware": "^2.0.2",
-    "koa-webpack-hot-middleware": "^1.0.3",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.0",
@@ -57,22 +51,25 @@
     "react-router-dom": "^4.4.0-beta.6"
   },
   "devDependencies": {
+    "@types/browser-sync": "0.0.42",
     "@types/clean-webpack-plugin": "^0.1.2",
     "@types/css-modules-require-hook": "^4.0.1",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/koa": "^2.0.46",
     "@types/koa-router": "^7.0.32",
     "@types/koa-static": "^4.0.0",
+    "@types/koa-views": "^2.0.3",
+    "@types/koa-webpack": "^5.0.1",
     "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/node": "^10.12.1",
     "@types/react": "^16.4.17",
     "@types/react-dom": "^16.0.9",
     "@types/react-loadable": "^5.4.1",
+    "@types/react-router-config": "^1.0.9",
     "@types/react-router-dom": "^4.3.1",
     "@types/uglifyjs-webpack-plugin": "^1.1.0",
     "@types/webpack": "^4.4.17",
     "@types/webpack-bundle-analyzer": "^2.13.0",
-    "@types/webpack-dev-server": "^3.1.1",
     "@types/webpack-env": "^1.13.6",
     "@types/webpack-merge": "^4.1.3",
     "@types/webpack-node-externals": "^1.6.3",
@@ -91,6 +88,7 @@
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "koa-webpack": "^5.1.1",
     "mini-css-extract-plugin": "^0.4.0",
     "nodemon": "^1.18.4",
     "optimize-css-assets-webpack-plugin": "^4.0.1",
@@ -115,7 +113,6 @@
     "webpack": "^4.9.1",
     "webpack-bundle-analyzer": "^3.0.2",
     "webpack-cli": "^2.1.4",
-    "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2",
     "webpack-node-externals": "^1.7.2"
   }
