--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "mini-css-extract-plugin": "^0.4.0",
     "nodemon": "^1.18.4",
     "optimize-css-assets-webpack-plugin": "^4.0.1",
+    "postcss": "^6.0.23",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^2.1.5",
     "postcss-mixins": "^6.2.0",
@@ -104,7 +105,7 @@
     "ts-node": "^7.0.1",
     "ts-node-dev": "^1.0.0-pre.30",
     "tsconfig-paths": "^3.6.0",
-    "tslint": "^5.11.0",
+    "tslint": "^5.1.0",
     "tslint-loader": "^3.5.4",
     "tslint-react": "^3.6.0",
     "typescript": "^3.1.3",
