feat: browser add redux

--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "@fortawesome/react-fontawesome": "^0.1.2",
-    "@types/koa-logger": "^3.1.1",
     "babel-polyfill": "^6.26.0",
+    "cross-fetch": "^2.2.3",
     "ejs": "^2.6.1",
     "koa": "^2.5.3",
     "koa-logger": "^3.2.0",
@@ -52,8 +52,11 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-loadable": "^5.5.0",
+    "react-redux": "^5.1.1",
     "react-router-config": "^4.4.0-beta.6",
-    "react-router-dom": "^4.4.0-beta.6"
+    "react-router-dom": "^4.4.0-beta.6",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/browser-sync": "0.0.42",
@@ -61,6 +64,7 @@
     "@types/css-modules-require-hook": "^4.0.1",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/koa": "^2.0.46",
+    "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.0.32",
     "@types/koa-static": "^4.0.0",
     "@types/koa-views": "^2.0.3",
@@ -70,8 +74,11 @@
     "@types/react": "^16.4.17",
     "@types/react-dom": "^16.0.9",
     "@types/react-loadable": "^5.4.1",
+    "@types/react-redux": "^6.0.9",
     "@types/react-router-config": "^1.0.9",
     "@types/react-router-dom": "^4.3.1",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "@types/uglifyjs-webpack-plugin": "^1.1.0",
     "@types/webpack": "^4.4.17",
     "@types/webpack-bundle-analyzer": "^2.13.0",
