--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run dev",
-    "dev": "nodemon --watch 'src/server/**/*.*' --exec 'ts-node' src/server/index.dev.ts",
+    "dev": "npm-run-all --parallel dev:**",
+    "dev:serve": "nodemon  --watch 'dist/server/**/*.*' ./dist/server/main.js",
+    "dev:build": "webpack --watch --config ./config/webpack.node.dev.conf.ts",
     "serve": "node ./dist/server/main.js",
     "stop": "pm2 stop ./dist/server/main.js",
     "pm2": "pm2",
@@ -87,7 +89,6 @@
     "@types/webpack-env": "^1.13.6",
     "@types/webpack-merge": "^4.1.3",
     "@types/webpack-node-externals": "^1.6.3",
-    "asset-require-hook": "^1.2.0",
     "autoprefixer": "^8.6.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
@@ -98,13 +99,14 @@
     "browser-sync-webpack-plugin": "^2.2.2",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
-    "css-modules-require-hook": "^4.2.3",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "isomorphic-style-loader": "^4.0.0",
     "koa-webpack": "^5.1.1",
     "mini-css-extract-plugin": "^0.4.0",
     "nodemon": "^1.18.4",
+    "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^4.0.1",
     "postcss": "^6.0.23",
     "postcss-import": "^12.0.1",
