refact: file structure and tsconfig

--- a/config/tsconfig.server.json
+++ b/config/tsconfig.server.json
@@ -19,10 +19,7 @@
     ],
     "paths": {
       "@/*": [
-        "./src/browser/*"
-      ],
-      "#/*": [
-        "./src/server/*"
+        "./src/*"
       ]
     }
   },
