--- a/config/tsconfig.browser.json
+++ b/config/tsconfig.browser.json
@@ -13,11 +13,17 @@
     "experimentalDecorators": true,
     "resolveJsonModule": true,
     "baseUrl": "./",
-    "typeRoots": ["./typings", "./node_modules/@types/"],
+    "typeRoots": [
+      "./typings",
+      "./node_modules/@types/"
+    ],
     "paths": {
-      "@/*": ["./src/browser/*"],
-      "#/*": ["./src/server/*"]
+      "@/*": [
+        "./src/*"
+      ],
     }
   },
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
