feat(SSR): css use HOC withStyle

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "npm-run-all --parallel dev:**",
-    "dev:serve": "nodemon  --watch 'dist/server/**/*.*' ./dist/server/main.js",
+    "dev:serve": "nodemon ./dist/server/main.js --watch 'dist/server/**/*.*' ",
     "dev:build": "webpack --watch --config ./config/webpack.node.dev.conf.ts",
     "serve": "node ./dist/server/main.js",
     "stop": "pm2 stop ./dist/server/main.js",
@@ -41,10 +41,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "@fortawesome/react-fontawesome": "^0.1.2",
     "@types/axios": "^0.14.0",
+    "@types/hoist-non-react-statics": "^3.0.1",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "cross-fetch": "^2.2.3",
     "ejs": "^2.6.1",
+    "hoist-non-react-statics": "^3.2.1",
     "koa": "^2.5.3",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
