--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,6 @@
     "moduleResolution": "node",
     "noImplicitAny": false,
     "strictNullChecks": true,
-    "noUnusedParameters": true,
     "noUnusedLocals": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
@@ -20,7 +19,13 @@
     "paths": {
       "@/*": [
         "./src/*"
-      ],
+      ]
     }
-  }
+  },
+  "include": [
+    "../typings/**/*"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
