--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "build": "webpack --config ./config/webpack.prod.conf.ts",
     "build:server": "webpack --config ./config/webpack.node.prod.conf.ts",
     "build:dll": "webpack --config ./config/webpack.dll.conf.ts",
+    "build:browser": "webpack --config ./config/webpack.browser.prod.conf.ts",
     "build:docker": "docker build -t my-app .",
     "docker:run": "docker run -dit -p 80:4000 my-app",
     "docker:debug": "docker exec -it [id] /bin/sh",
@@ -70,6 +71,7 @@
   "devDependencies": {
     "@types/browser-sync": "0.0.42",
     "@types/clean-webpack-plugin": "^0.1.2",
+    "@types/compression-webpack-plugin": "^2.0.0",
     "@types/css-modules-require-hook": "^4.0.1",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/koa": "^2.0.46",
@@ -103,6 +105,7 @@
     "browser-sync": "^2.26.3",
     "browser-sync-webpack-plugin": "^2.2.2",
     "clean-webpack-plugin": "^0.1.19",
+    "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
