--- a/ssr-service/package.json
+++ b/ssr-service/package.json
@@ -27,8 +27,7 @@
     "build:dll": "webpack --config ./config/webpack.dll.conf.ts",
     "build:browser": "webpack --config ./config/webpack.browser.prod.conf.ts",
     "build:docker": "docker build -t my-app .",
-    "docker:run": "docker run -dit -p 80:4000 my-app",
-    "docker:debug": "docker exec -it [id] /bin/sh",
+    "docker:run": "docker run -d -v /Users/garry/myworkspace/blog/ssr-service/log:/app/log -p 80:4000 my-app",
     "tslint": "tslint --fix -c ./tslint.json 'src/**/*{.ts,.tsx}'"
   },
   "keywords": [
@@ -46,16 +45,17 @@
     "@fortawesome/react-fontawesome": "^0.1.2",
     "@types/axios": "^0.14.0",
     "@types/hoist-non-react-statics": "^3.0.1",
+    "@types/log4js": "^2.3.5",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "cross-fetch": "^2.2.3",
     "ejs": "^2.6.1",
     "hoist-non-react-statics": "^3.2.1",
     "koa": "^2.5.3",
-    "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.1.4",
+    "log4js": "^4.0.2",
     "normalize.css": "^8.0.0",
     "pm2": "^3.2.2",
     "prop-types": "^15.6.2",
