--- a/blog-service/package.json
+++ b/blog-service/package.json
@@ -18,6 +18,7 @@
     "@types/koa": "^2.0.48",
     "@types/koa-router": "^7.0.40",
     "@types/log4js": "^2.3.5",
+    "@types/mysql": "^2.15.5",
     "cross-env": "^5.2.0",
     "nodemon": "^1.18.10",
     "ts-node": "^8.0.2",
@@ -29,6 +30,7 @@
     "koa-router": "^7.4.0",
     "log4js": "^4.0.2",
     "mockjs": "^1.0.1-beta3",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.5"
   }
 }
