--- a/blog-service/package.json
+++ b/blog-service/package.json
@@ -20,6 +20,7 @@
     "@types/koa-router": "^7.0.40",
     "@types/log4js": "^2.3.5",
     "@types/mysql": "^2.15.5",
+    "@types/urllib": "^2.28.1",
     "cross-env": "^5.2.0",
     "nodemon": "^1.18.10",
     "ts-node": "^8.0.2",
@@ -32,6 +33,7 @@
     "log4js": "^4.0.2",
     "mockjs": "^1.0.1-beta3",
     "mysql": "^2.16.0",
-    "mysql2": "^1.6.5"
+    "mysql2": "^1.6.5",
+    "urllib": "^2.33.0"
   }
 }
