feat(MVC): validate diff type argument

--- a/blog-service/package.json
+++ b/blog-service/package.json
@@ -34,6 +34,7 @@
     "mockjs": "^1.0.1-beta3",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
+    "parameter": "^3.5.0",
     "urllib": "^2.33.0"
   }
 }
