--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,28 @@
 version: "3"
 services:
-
-   db:
-     image: mysql:5.7
-     volumes:
-       - ./db-service/config:/etc/mysql/conf.d
-       - ./db-service/sql:/docker-entrypoint-initdb.d
-     ports:
-       - "3306:3306"
-     environment:
-       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
-
-   bussiness-service:
-     build: ./bussiness-service
-     volumes:
-       - ./bussiness-service/log:/app/log
-     depends_on:
-       - db
-     ports:
-       - "5000:5000"
-
-    ssr-service:
-     build: ./ssr-service
-     volumes:
-       - ./ssr-service/log:/app/log
-     depends_on:
-       - db
-       - bussiness-service
-     ports:
-       - "80:4000"
+  db:
+    image: mysql:5.7
+    volumes:
+      - ./db-service/config:/etc/mysql/conf.d
+      - ./db-service/sql:/docker-entrypoint-initdb.d
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+  bussiness-service:
+    build: ./bussiness-service
+    volumes:
+      - ./bussiness-service/log:/app/log
+    depends_on:
+      - db
+    ports:
+      - "5000:5000"
+  ssr-service:
+    build: ./ssr-service
+    volumes:
+      - ./ssr-service/log:/app/log
+    depends_on:
+      - db
+      - bussiness-service
+    ports:
+      - "80:4000"
